--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,8 @@ What is this about?
 
 == TEST
 
+Some images
+
 image::processes/toggle.gif[title="Toggle Token Simulation feature"]
 image::processes/start-simulation.gif[title="Start the Token Simulation"]
 image::processes/play.gif[title="Play a Token Simulation"]
